packages/typ/tests/fixtures/diagnostics/0831_polyvar_call_payload_mismatch_08.ml.expected
File "0831_polyvar_call_payload_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0831_polyvar_call_payload_mismatch_08 is not a valid module name.

File "0831_polyvar_call_payload_mismatch_08.ml", line 4, characters 23-27:
4 | let _ = read_theta (`A true)
                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
